Fixes + Clean-up/Reworking of some figures

--- a/overview.ipynb
+++ b/overview.ipynb
@@ -51,7 +51,10 @@
     "        mass=7294.29953,\n",
     "        bulk_velocity=1.0e5\n",
     "    )\n",
-    ")"
+    ")\n",
+    "\n",
+    "save=True\n",
+    "plots.FIGURE_FORMAT = \"svg\""
    ]
   },
   {
@@ -62,7 +65,7 @@
    "source": [
     "plots.electricFieldOverSpaceAndTime(\n",
     "    folder=RESULTS_FOLDER / \"proton-alpha-instability-1D\",\n",
-    "    info=run_info\n",
+    "    info=run_info, save=save\n",
     ")\n",
     "plt.show()"
    ]
@@ -75,7 +78,7 @@
    "source": [
     "plots.averageTemperature3DOverTime(\n",
     "    folder=RESULTS_FOLDER / \"proton-alpha-instability-1D\",\n",
-    "    info=run_info\n",
+    "    info=run_info, save=save\n",
     ")\n",
     "plt.show()"
    ]
@@ -89,8 +92,7 @@
     "for s in Species:\n",
     "    plots.velocityDistributionOverTime(\n",
     "        folder=RESULTS_FOLDER / \"proton-alpha-instability-1D\",\n",
-    "        info=run_info,\n",
-    "        species=s\n",
+    "        info=run_info, species=s, save=save\n",
     "    )\n",
     "plt.show()"
    ]
@@ -103,7 +105,7 @@
    "source": [
     "plots.electricFieldEnergyOverTime(\n",
     "    folder=RESULTS_FOLDER / \"proton-alpha-instability-1D\",\n",
-    "    info=run_info\n",
+    "    info=run_info, save=save\n",
     ")\n",
     "plt.show()"
    ]
@@ -124,7 +126,7 @@
     "variation_folder = RESULTS_FOLDER / \"particle_variation\"\n",
     "for particle_folder in sorted(variation_folder.glob(\"particles_*\")):\n",
     "    plots.multiElectricFieldEnergyOverTime(\n",
-    "        particle_folder, run_info,\n",
+    "        particle_folder, run_info, save=save,\n",
     "        identifer=f\"particles_per_cell_{int(particle_folder.stem[-4:])}\"\n",
     "    )"
    ]
@@ -135,7 +137,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plots.particleVariationGrowthRate(run_info)\n",
+    "plots.particleVariationEnergyVsTime(info=run_info, save=save)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plots.particleVariationGrowthRate(run_info, save=save)\n",
     "plt.show()"
    ]
   },
@@ -146,17 +158,7 @@
    "outputs": [],
    "source": [
     "for species in Species:\n",
-    "    plots.particleVariationTemperature3D(species)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plots.particleVariationEnergyVsTime(info=run_info)\n",
+    "    plots.particleVariationTemperature3D(species, save=save)\n",
     "plt.show()"
    ]
   },
@@ -167,7 +169,7 @@
    "outputs": [],
    "source": [
     "for species in Species:\n",
-    "    plots.particleVariationTemperatureXDiff(run_info, species)\n",
+    "    plots.particleVariationTemperatureXDiff(run_info, species, save=save)\n",
     "plt.show()"
    ]
   },
@@ -178,24 +180,7 @@
    "outputs": [],
    "source": [
     "for species in Species:\n",
-    "    plots.particleVariationTemperatureXVsTime(run_info, species)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Wave number"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plots.particleVariationWavenumber(info=run_info)\n",
+    "    plots.particleVariationTemperatureXVsTime(run_info, species, save=save)\n",
     "plt.show()"
    ]
   },
@@ -205,8 +190,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plots.particleVariationFrequency(info=run_info)\n",
+    "plots.particleVariationWavenumber(info=run_info, save=save)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plots.particleVariationFrequency(info=run_info, save=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plots.electricFieldOverSpaceAndTime(\n",
+    "    folder=RESULTS_FOLDER / \"proton-alpha-instability-1D\",\n",
+    "    info=run_info, save=save\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plots.electricFieldOverSpaceAndTime(\n",
+    "    folder=RESULTS_FOLDER / \"proton-alpha-instability-1D\",\n",
+    "    info=run_info, save=save\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plots.electricFieldOverSpaceAndTime(\n",
+    "    folder=RESULTS_FOLDER / \"particle_variation/particles_4192/rep_0\",\n",
+    "    info=run_info, save=save\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time, (electric_field,), _ = analysis.readFromRun(\n",
+    "    folder=RESULTS_FOLDER / \"proton-alpha-instability-1D\", #\"particle_variation/particles_4192/rep_0\",\n",
+    "    dataset_names=[\"/Electric Field/ex\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_2, (electric_field_2,), _ = analysis.readFromRun(\n",
+    "    folder=RESULTS_FOLDER / \"particle_variation/particles_4192/rep_1\",\n",
+    "    dataset_names=[\"/Electric Field/ex\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(electric_field[-10])"
    ]
   }
  ],
@@ -226,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
